# rfc4122

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: actions.yml
mbedtls_override/mbedtls/: config.h
src/: copyrt.h  sysdep.c  sysdep.h  utest.c  uuid.c  uuid.h
